docs: :memo: add documentation for delete opening
